--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "opentelemetry-sdk>=1.37.0",
     # FastAPI web framework for UI
     "fastapi>=0.104.0",
-    "uvicorn[standard]>=0.24.0",
+    "uvicorn>=0.24.0",
     "python-multipart>=0.0.6",
     "aiofiles>=23.2.1",
 ]
